# automake

./: CMakeLists.txt  README.md  catch_errors.hpp  do_something.cpp  do_something.hpp  main.cpp  typeofcontents.h
AutoMake/: CMakeLists.txt  catch_errors.hpp  helperfunctions.cpp  helperfunctions.hpp  main.cpp  scan.cpp  scan.hpp  typeofcontents.hpp
build-AutoMake-Desktop_Qt_6_2_2_GCC_64bit-Debug/: .ninja_deps  .ninja_log  AutoMake  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-AutoMake-Desktop_Qt_6_2_2_GCC_64bit-Debug/.cmake/api/v1/reply/: cache-v2-a5de27de062ef338c3e7.json  cmakeFiles-v1-6b2ba0620c225bc3bc10.json  codemodel-v2-225b86ff41f1484d8a22.json  index-2022-01-28T06-42-59-0439.json  target-AutoMake-Debug-8fe512e3fcc8987aa34d.json
build-AutoMake-Desktop_Qt_6_2_2_GCC_64bit-Debug/.qtc_clangd/: compile_commands.json
build-AutoMake-Desktop_Qt_6_2_2_GCC_64bit-Debug/.qtc_clangd/.cache/clangd/index/: __stddef_max_align_t.h.41B4167A56E9C9D0.idx  algorithm.04384368751CEAFE.idx  algorithmfwd.h.33138345B3B9F519.idx  alloc_traits.h.9A2CDF667233E4D8.idx  alloc_traits.h.DA49BC37F69964B7.idx  alloca.h.B3C3404035C15EA6.idx  allocated_ptr.h.F6B60C44855F68F0.idx  allocator.h.9B08689EE532AC91.idx  array.28F4A4CBBA9ECF87.idx  atomic_base.h.41E903398B6DEC39.idx  atomic_lockfree_defines.h.C82A14C5009A7A3C.idx  auto_ptr.h.533092D1F6EC44B1.idx  basic_ios.h.B2E30A80EA8E81C3.idx  basic_ios.tcc.1F906AFEA1CBAC67.idx  basic_string.h.34DE58078E05AE19.idx  (+167 more)
include/: catch_errors.hpp  do_something.hpp
src/: CMakeLists.txt  do_something.cpp  main.cpp
