cmake_minimum_required(VERSION 3.5 )
project( AutoMake VERSION 1 DESCRIPTION "AutoMake is my C++ project" LANGUAGES CXX )
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
if(MSVC)
      add_compile_options(/W4 /WX)
else()
    add_compile_options(-Wall -Wextra -Wpedantic)
endif()
add_subdirectory(src)
